<resources>
    <string name="app_name">ContactBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_contacts">No contacts</string>
    <string name="remove_contacts">Remove all contacts</string>
    <string name="sort_contacts">Sort contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="update_contact">Update contact</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Name</string>
    <string name="button_edit_contact">Edit</string>
    <string name="set_reminder">Set a call reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="submit">Submit</string>
    <string name="call_notification_title">You have a call scheduled</string>
    <string name="call_notification_subtitle">You should call to %1$s</string>
    <string name="call_notification_error">Can not do notification</string>
    <string name="call_notification_channel_id">call_channel</string>
    <string name="call_notification_channel_name">"Call Reminder "</string>
    <string name="invalid_date">Invalid date - too short delay</string>
    <string name="dots_time_picker">:</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="contact_image_desc">Contact image</string>
    <string name="reminder_btn_image_desc">Call reminder button</string>
    <string name="delete_reminder_btn_desc">Delete call reminder</string>
    <string name="phone_call_image_btn_desc">Phone call button</string>
    <string name="edit_contact_btn_desc">Edit contact button</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
</resources>