<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.contactbook.screens.contacts.ContactsViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_list_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:context=".screens.contacts.ContactsAdapter">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:padding="5dp"
                android:text="@string/name"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/favourite_image"
                app:layout_constraintStart_toEndOf="@+id/contact_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contact_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/number"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/contact_name"
                app:layout_constraintStart_toStartOf="@+id/contact_name"
                app:layout_constraintTop_toBottomOf="@+id/contact_name" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contacts_second_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_number" />

            <ImageView
                android:id="@+id/contact_image_view"
                android:layout_width="67dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/contact_image_desc"
                android:padding="2.5dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/contact_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/contact_name"
                app:srcCompat="@drawable/person_icon_24"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/favourite_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/edit_contact_btn_desc"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/edit_contact_button"
                app:layout_constraintEnd_toStartOf="@+id/edit_contact_button"
                app:layout_constraintTop_toTopOf="@+id/edit_contact_button"
                app:srcCompat="@drawable/star_icon_yellow_24" />

            <ImageView
                android:id="@+id/phoneCallImageView"
                android:layout_width="42dp"
                android:layout_height="38dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/phone_call_image_btn_desc"
                app:layout_constraintBottom_toBottomOf="@+id/contact_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_call_24" />

            <ImageView
                android:id="@+id/edit_contact_button"
                android:layout_width="42dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/edit_contact_btn_desc"
                app:layout_constraintBottom_toBottomOf="@+id/phoneCallImageView"
                app:layout_constraintEnd_toStartOf="@+id/phoneCallImageView"
                app:layout_constraintTop_toTopOf="@+id/phoneCallImageView"
                app:srcCompat="@drawable/edit_icon_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>